# dansmabot

./: .gitignore  pyproject.toml
src/dansmabot/: main.py  schema.py  tirages.py  utils.py
